agnostics/default-network-policy/aws/base/clusterwide-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: k8tre-default-network-policy
spec:
  egress:
    - toEntities:
        - cluster
    - toCIDR:
        # TODO: For now allow all traffic to VPC
        - 10.0.0.0/16
    - toFQDNs:
        # TODO: narrow this down
        - matchPattern: "**.amazonaws.com"
    # Need to force DNS via Cilium
    # https://docs.cilium.io/en/stable/security/policy/language/#dns-obtaining-data
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              # TODO: narrow this down
              - matchPattern: "*"
  endpointSelector: {}
  # ingress:
  #   - fromEntities:
  #       - cluster
  #       - world
